--- a/.env
+++ b/.env
@@ -10,9 +10,9 @@
                   DB_CONNECTION=mysql
                   DB_HOST=127.0.0.1
                   DB_PORT=3306
-                  DB_DATABASE=cfp_rdv
+                  DB_DATABASE=dinovert
                   DB_USERNAME=root
-                  DB_PASSWORD=
+                  DB_PASSWORD=root
 
                   BROADCAST_DRIVER=log
                   CACHE_DRIVER=file
