--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
     "private": true,
     "scripts": {
         "ArtisanServe": "php artisan serve",
+        "Migration": "php artisan migrate:refresh --seed",
+        "Instalation": "composer install && npm install",
         "dev": "npm run development",
         "development": "mix",
         "watch": "mix watch",
