--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "scripts": {
         "ArtisanServe": "php artisan serve",
         "Migration": "php artisan migrate:refresh --seed",
-        "install": "composer install && npm install",
+        "Instalation": "composer install && npm install",
         "dev": "npm run development",
         "development": "mix",
         "watch": "mix watch",
