--- a/.env
+++ b/.env
@@ -27,11 +27,16 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_USERNAME=7f3541f3dce1b8
+MAIL_PASSWORD=3948f7689e936b
+MAIL_ENCRYPTION=tls
+
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
+
+
+
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
