first test wysiwyg

--- a/.env
+++ b/.env
@@ -34,9 +34,7 @@ MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
-
-
-
+TYNY_KEY=qg3ec6i44rbiw5399mtl1ltcql76g4o3w42gj7c4d7ix2wa5
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
