--- a/.env
+++ b/.env
@@ -7,8 +7,15 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-DB_DATABASE=/home/Benjamin/PhpstormProjects/dinoVert/database/dinovert.sqlite
+#DB_CONNECTION=sqlite
+#DB_DATABASE=/home/Benjamin/PhpstormProjects/dinoVert/database/dinovert.sqlite
+DB_CONNECTION=mysql
+DB_HOST=localhost
+DB_USERNAME=root
+DB_PASSWORD=root
+DB_DATABASE=dinovert
+DB_PORT=3306
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
